--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: ApiTester-JS/package-lock.json
 
       - name: Install dependencies
         working-directory: ApiTester-JS       # 切到你的子项目目录
